--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
       .top-level-container{
         width:700px;
         height:700px;
-        margin:100 auto;
+        margin-top:100px;
+        margin-left:auto;
+        margin-right:auto;
         border:1px solid #cc0000;
+        text-align:center;
       }
     </style>
     
