--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <title>Top Level Masonry</title>
     
     <style>
+      body{
+        background-image:
+        radial-gradient(
+        yellow,
+        #f06d06
+        );
+      }
       .top-level-container{
         width:700px;
         height:700px;
@@ -13,6 +20,7 @@
         margin-right:auto;
         border:1px solid #cc0000;
         text-align:center;
+        background-color:#fff;
       }
     </style>
     
