--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="en">
   <head>
+    
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Top Level Masonry</title>
     <link rel="stylesheet" href="./foundation/css/foundation.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="./framework/js/vendor/modernizr.js"></script>
-
-    <style>
-      body{
-        background-image:radial-gradient(yellow,#f06d06);}
-    </style>
 
   </head>
   <body>
