--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./framework/css/foundation.css" />
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./framework/js/vendor/modernizr.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="./js/console.js"></script>
 
   </head>
