changes to folder structure

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="msvalidate.01" content="1012B4DA3ECC7F603E0E8132F7ABCF90" />
 
-	<link rel="icon" type="image/ico" href="img/toplevel.ico"/>
+	<link rel="icon" type="image/ico" href="./img/toplevel.ico"/>
 
     <title>Top Level Masonry llc. North Dakota | North East Montana</title>
 
-    <link rel="stylesheet" href="css/foundation.css" />
-	<script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="./css/foundation.css" />
+	<script src="./js/vendor/modernizr.js"></script>
 
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
