complete file path

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <title>Top Level Masonry llc. North Dakota | North East Montana</title>
 
-    <link rel="stylesheet" href="./css/foundation.css" />
-	<script src="./js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="./framework/css/foundation.css" />
+	<script src="./framework/js/vendor/modernizr.js"></script>
 
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
