add google jQuery CDN

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta content="Block Masonry, Brick Masonry, Footings, Custom Brick Work, Custom Block Work, Williston, Watford City, Dickinson North Dakota & North East Montana, Tile, Hardwood Flooring, Decks, General Construction, Remodelling" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="msvalidate.01" content="1012B4DA3ECC7F603E0E8132F7ABCF90" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 	<link rel="icon" type="image/ico" href="./img/toplevel.ico"/>
 
