--- a/index.html
+++ b/index.html
@@ -246,8 +246,8 @@
   </footer>
   </div><!--end outside loop div-->
 
-   <script src="js/vendor/jquery.js"></script>
-   <script src="js/foundation.min.js"></script>
+   <script src="./framewrok/js/vendor/jquery.js"></script>
+   <script src="./framework/js/foundation.min.js"></script>
    <script>$(document).foundation();</script>
   </body>
 
