--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 	<meta name="description" content="Top Level Masonry is North Dakota and Montana's Premier Brick Masonry Company"/>
-	<meta content="Block Masonry, Brick Masonry, Footings, Custom Brick Work, Custom Block Work, Williston, Watford City, Dickinson North Dakota & North East Montana, Tile, Hardwood Flooring, Decks, General Construction, Remodelling" />
+	<meta content="Block Masonry, Brick Masonry, Footings, Custom Brick Work, Custom Block Work, Williston, Watford City, Dickinson North Dakota &amp; North East Montana, Tile, Hardwood Flooring, Decks, General Construction, Remodelling" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="msvalidate.01" content="1012B4DA3ECC7F603E0E8132F7ABCF90" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
@@ -67,7 +67,7 @@
       <ul class="right button-group">
 	  <li><a href="#about" class="button">About Us</a></li>
       <li><a href="contact.php" class="button">Contact Us</a></li>
-      <li><a href="current-projects.php" class="button">Current & Past Projects</a></li>
+      <li><a href="current-projects.php" class="button">Current &amp; Past Projects</a></li>
       </ul>
      </div>
    </div>
@@ -133,7 +133,7 @@
 	<div class="row">
     <div class="large-4 columns">
       <img src="img/tile_at_top_level.png" alt="Top Level Masonry image of brick and block work" title="Top Level Masonry Installs Tile & Hardwood Flooring"/>
-      <h4>Tile & Hardwood Flooring</h4>
+      <h4>Tile &amp; Hardwood Flooring</h4>
       <p>Need Tile work? Give us a Call! We have Experience with everything from Tile Flooring to Back Splashes and Tile baseboards</p>
     </div>
 
@@ -145,7 +145,7 @@
 
     <div class="large-4 columns">
       <img src="img/remodelling_at_tlm.png" alt="Top Level Masonry image of brick and block work" title="Top Level is a General Construction and Remodelling Leader in the Industry"/>
-      <h4>General Construction & Remodelling</h4>
+      <h4>General Construction &amp; Remodelling</h4>
       <p>We are heavily involved in many general construction projects and remodels</p>
     </div>
 
@@ -175,7 +175,7 @@
 	<div class="row">
     <div class="large-4 columns">
       <img src="img/top_level_masonry_image_7.png" alt="Top Level Masonry image of brick and block work" title="TLM has been involved in many Spec home applications"/>
-      <h4>Spec & Custom Homes</h4>
+      <h4>Spec &amp; Custom Homes</h4>
       <p>We have been contracted to build many brick structures, from custom homes, to spec homes and even several franchise projects! Let us help you on your large scale small building builds.</p>
     </div>
 
