--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
     <div class="large-9 columns">
       <ul class="right button-group">
 	  <li><a href="#about" class="button">About Us</a></li>
-      <li><a href="contact.php" class="button">Contact Us</a></li>
-      <li><a href="current-projects.php" class="button">Current &amp; Past Projects</a></li>
+      <li><a href="contact.html" class="button">Contact Us</a></li>
+      <li><a href="current-projects.html" class="button">Current &amp; Past Projects</a></li>
       </ul>
      </div>
    </div>
@@ -91,7 +91,7 @@
     <div class="large-4 columns">
       <img src="img/top_level_masonry_image_1.png" alt="Top Level Masonry image of brick and block work" title="Top Level Masonry specializes in custom brick homes"/>
       <h4>Custom Brick Homes</h4>
-      <p>Top Level Masonry has been involved in many custom Brick applications, <a href="contact.php">contact us today</a> to see how we can give your project that custom touch!</p>
+      <p>Top Level Masonry has been involved in many custom Brick applications, <a href="contact.html">contact us today</a> to see how we can give your project that custom touch!</p>
     </div>
 
     <div class="large-4 columns">
@@ -203,7 +203,7 @@
             <p>Top Level Masonry specializes in custom brick and block work, Centrally located in North Dakota T.L.M. works in Watford City, Williston and in Dickinson. We also work from time to time in North Eastern Montana. We have more than 60 years of combined experience in the masonry business and we have layed the stone work for foundations, custom buildings, timeless architectural buildings and things as simple as a custom brick mailbox. Ready to start a conversation? Learn about us or get a free quote? Contact us Today!</p>
           </div>
 			<div class="large-3 columns">
-				<a href="contact.php" class="radius button right">Contact Us</a>
+				<a href="contact.html" class="radius button right">Contact Us</a>
 				</div>
 					</div>
 						</div>
@@ -227,18 +227,18 @@
     <div class="large-12 columns">
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; <?php echo date('Y')?> Top Level Masonry LLC.</p>
+          <p>&copy; <?html echo date('Y')?> Top Level Masonry LLC.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
 			<li><a href="#top"><p style="color:black;">back to the top</p></a></li>
-			<li><a href="contact.php"><p style="color:black;">contact us</p></a></li>
+			<li><a href="contact.html"><p style="color:black;">contact us</p></a></li>
 			<li><a href="tel:7017135610"><p style="color:black">Call us at <mark>701-713-5610</mark></p></a></li>
 			<li><a href="http://www.facebook.com/toplevelmasonry"><img src="img/facebook_logo_top_level.png" alt="like us on facebook" title="like Top Level on facebook"></a></li>
-			<li><a href="articles.php"><p style="color:black;">articles</p></a></li>
-			<li><a href="current-projects.php"><p style="color:black;">projects</p></a></li>
+			<li><a href="articles.html"><p style="color:black;">articles</p></a></li>
+			<li><a href="current-projects.html"><p style="color:black;">projects</p></a></li>
 			<li><a href="sitemap.xml"><p style="color:black;">xml sitemap</p></a></li>
-            <li><a href="http://www.4point0designs.com/index.php"><p style="color:black;">web page by 4.0</p></a></li>
+            <li><a href="http://www.4point0designs.com/index.html"><p style="color:black;">web page by 4.0</p></a></li>
           </ul>
         </div>
       </div>
