--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
 
     <title>Top Level Masonry llc. North Dakota | North East Montana</title>
 
-    <link rel="stylesheet" href="css/foundation.css" />
-	<script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="./framework/css/foundation.css" />
+	<script src="./framework/js/vendor/modernizr.js"></script>
 
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
@@ -143,8 +143,8 @@
   </footer>
   </div><!--end outside loop div-->
 
-   <script src="js/vendor/jquery.js"></script>
-   <script src="js/foundation.min.js"></script>
+   <script src="./framework/js/vendor/jquery.js"></script>
+   <script src="./framework/js/foundation.min.js"></script>
    <script>$(document).foundation();</script>
   </body>
 
