changes to date

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
     <div class="large-12 columns">
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; <?php echo date('Y')?> Top Level Masonry LLC.</p>
+          <p>&copy; <script>document.write(new Date().getFullYear())</script> Top Level Masonry LLC.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
