changes to "A" tags

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     </div>
     <div class="large-9 columns">
       <ul class="right button-group">
-	  <li><a href="index.php" class="button">Home Page</a></li>
+	  <li><a href="index.html" class="button">Home Page</a></li>
       </ul>
      </div>
    </div>
@@ -67,7 +67,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 
-<form id='contactus' action='send.php' method='post' enctype="multipart/form-data" accept-charset='UTF-8'>
+<form id='contactus' action='send.html' method='post' enctype="multipart/form-data" accept-charset='UTF-8'>
 <fieldset>
 <legend>Contact Top Level Masonry llc.</legend>
 
@@ -132,10 +132,10 @@
 			<li><a href="#top"><p style="color:black;">back to the top</p></a></li>
 			<li><a href="tel:7017135610"><p style="color:black">Call us at <mark>701-713-5610</mark></p></a></li>
 			<li><a href="http://www.facebook.com/toplevelmasonry"><img src="img/facebook_logo_top_level.png" alt="like us on facebook" title="like Top Level on facebook"></a></li>
-			<li><a href="articles.php"><p style="color:black;">articles</p></a></li>
-			<li><a href="current-projects.php"><p style="color:black;">projects</p></a></li>
+			<li><a href="articles.html"><p style="color:black;">articles</p></a></li>
+			<li><a href="current-projects.html"><p style="color:black;">projects</p></a></li>
 			<li><a href="sitemap.xml"><p style="color:black;">xml sitemap</p></a></li>
-            <li><a href="http://www.4point0designs.com/index.php"><p style="color:black;">web page by 4.0</p></a></li>
+            <li><a href="http://www.4point0designs.com/index.html"><p style="color:black;">web page by 4.0</p></a></li>
           </ul>
         </div>
       </div>
