--- a/contact.html
+++ b/contact.html
@@ -67,42 +67,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 
-<form id='contactus' action='send.html' method='post' enctype="multipart/form-data" accept-charset='UTF-8'>
-<fieldset>
-<legend>Contact Top Level Masonry llc.</legend>
-
-<div class="required_fields">* required fields</div>
-
-<div class='container'>
-    <label for='name' >Your Full Name*: </label><br/>
-    <input type='text' name='name' placeholder="Please Enter Your First and Last Name Here" id='name' maxlength="60" class="large-5 columns" /><br/>
-    <span id='contactus_name' class='form_text'></span>
-</div>
-
-<div class='container'>
-    <label for='email' >Email Address*:</label><br/>
-    <input type='text' name='email' placeholder='e-mail address' id='email' maxlength="60" class="large-5 columns"/><br/>
-    <span id='contactus_email' class='form_text'></span>
-</div>
-
-<div class='container'>
-    <label for='email' >Telephone #:</label><br/>
-    <input type='text' name='phone' placeholder='Your Phone Number' id='phone' maxlength="60" class="large-5 columns"/><br/>
-    <span id='contactus_email' class='form_text'></span>
-</div>
-
-<div class='container'>
-    <label for='message' >Message:</label><br/>
-    <span id='contactus_message' class='form_text'></span>
-    <textarea rows="10" cols="50" name='message' placeholder='please be detailed in your message' id='message'></textarea>
-</div>
-
-<div>
-    <input type='submit' name='submit' value='submit' id='submit'/>
-</div>
-
-</fieldset>
-</form>
+<a href="mailto:someone@example.com?Subject=TopLevelWebMessage" target="_top">Contact by email</a>
 
 	</div>
 		<hr/>
