--- a/articles.html
+++ b/articles.html
@@ -12,8 +12,8 @@
 
     <title>Top Level Masonry llc. North Dakota | North East Montana</title>
 
-    <link rel="stylesheet" href="css/foundation.css" />
-	<script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="./framework/css/foundation.css" />
+	<script src="./framework/js/vendor/modernizr.js"></script>
 
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
@@ -65,9 +65,9 @@
     </div>
     <div class="large-9 columns">
       <ul class="right button-group">
-	  <li><a href="index.php" class="button">Home</a></li>
-      <li><a href="contact.php" class="button">Contact Us</a></li>
-      <li><a href="current-projects.php" class="button">Current Projects</a></li>
+	  <li><a href="index.html" class="button">Home</a></li>
+      <li><a href="contact.html" class="button">Contact Us</a></li>
+      <li><a href="current-projects.html" class="button">Current Projects</a></li>
       </ul>
      </div>
    </div>
@@ -161,7 +161,7 @@
 
 		 <p>This article was originally written by: Gregg Borchelt, P.E. Vice President, Engineering and Research Brick Industry Association (BIA) Reston, Va. and it was originally published in Masonry Magazine; the original article can be accessed by clicking <a href="http://www.masonrymagazine.com/10-02/cover.html"> here.</a></p>
 
-		 <p>Top Level Masonry's purpose in republishing this article is to emphasise the importance of choosing the right brick and in choosing the right brick masonry company. We exist as a resource to help you in your next project - you can contact us by clicking <a href="contact.php"> here </a></p>
+		 <p>Top Level Masonry's purpose in republishing this article is to emphasise the importance of choosing the right brick and in choosing the right brick masonry company. We exist as a resource to help you in your next project - you can contact us by clicking <a href="contact.html"> here </a></p>
 
 		 <hr>
 
@@ -182,7 +182,7 @@
 			<li><a href="#structural"><span style="color:black;">Structural Loads</span></a></li>
             <li><a href="#general"><span style="color:black;">General Cost</span></a></li>
             <li><a href="#available"><span style="color:black;">Availability</span></a></li>
-			<li><a href="contact.php"><span style="color:black;">Contact</span></a></li>
+			<li><a href="contact.html"><span style="color:black;">Contact</span></a></li>
           </ul>
 
           <p><img src="img/top_level_ad_1.png" alt="Top Level Masonry Ad Image" title="Top Level Masonry"/></p>
@@ -203,7 +203,7 @@
 			<li><a href="#structural"><span style="color:black;">Structural Loads</span></a></li>
             <li><a href="#general"><span style="color:black;">General Cost</span></a></li>
             <li><a href="#available"><span style="color:black;">Availability</span></a></li>
-			<li><a href="contact.php"><span style="color:black;">Contact</span></a></li>
+			<li><a href="contact.html"><span style="color:black;">Contact</span></a></li>
           </ul>
 
 		  <p><img src="img/top_level_ad_5.png" alt="Top Level Masonry Ad Image" title="Top Level Masonry"/></p>
@@ -228,7 +228,7 @@
 			<li><a href="#structural"><span style="color:black;">Structural Loads</span></a></li>
             <li><a href="#general"><span style="color:black;">General Cost</span></a></li>
             <li><a href="#available"><span style="color:black;">Availability</span></a></li>
-			<li><a href="contact.php"><span style="color:black;">Contact</span></a></li>
+			<li><a href="contact.html"><span style="color:black;">Contact</span></a></li>
           </ul>
 
         </div>
@@ -254,18 +254,18 @@
     <div class="large-12 columns">
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; <?php echo date('Y')?> Top Level Masonry LLC.</p>
+          <p>&copy; <script>document.write(new Date().getFullYear())</script> Top Level Masonry LLC.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
 			<li><a href="#top"><p style="color:black;">back to the top</p></a></li>
-			<li><a href="contact.php"><p style="color:black;">contact us</p></a></li>
+			<li><a href="contact.html"><p style="color:black;">contact us</p></a></li>
 			<li><a href="tel:7017135610"><p style="color:black">Call us at <mark>701-713-5610</mark></p></a></li>
 			<li><a href="http://www.facebook.com/toplevelmasonry"><img src="img/facebook_logo_top_level.png" alt="like us on facebook" title="like Top Level on facebook"></a></li>
-			<li><a href="current-projects.php"><p style="color:black;">projects</p></a></li>
-			<li><a href="index.php"><p style="color:black;">home</p></a></li>
+			<li><a href="current-projects.html"><p style="color:black;">projects</p></a></li>
+			<li><a href="index.html"><p style="color:black;">home</p></a></li>
 			<li><a href="sitemap.xml"><p style="color:black;">xml sitemap</p></a></li>
-            <li><a href="http://www.4point0designs.com/index.php"><p style="color:black;">web page by 4.0</p></a></li>
+            <li><a href="http://www.4point0designs.com/index.html"><p style="color:black;">web page by 4.0</p></a></li>
           </ul>
         </div>
       </div>
@@ -273,8 +273,8 @@
   </footer>
   </div><!--end outside loop div-->
 
-   <script src="js/vendor/jquery.js"></script>
-   <script src="js/foundation.min.js"></script>
+   <script src="./framework/js/vendor/jquery.js"></script>
+   <script src="./framework/js/foundation.min.js"></script>
    <script>$(document).foundation();</script>
   </body>
 
