necessary updates and changes

--- a/current-projects.html
+++ b/current-projects.html
@@ -12,8 +12,8 @@
 
     <title>Top Level Masonry llc. North Dakota | North East Montana</title>
 
-    <link rel="stylesheet" href="css/foundation.css" />
-	<script src="js/vendor/modernizr.js"></script>
+    <link rel="stylesheet" href="./framework/css/foundation.css" />
+	<script src="./framework/js/vendor/modernizr.js"></script>
 
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
@@ -65,9 +65,9 @@
     </div>
     <div class="large-9 columns">
       <ul class="right button-group">
-	  <li><a href="index.php" class="button">Home</a></li>
-      <li><a href="contact.php" class="button">Contact Us</a></li>
-      <li><a href="articles.php" class="button">Articles</a></li>
+	  <li><a href="index.html" class="button">Home</a></li>
+      <li><a href="contact.html" class="button">Contact Us</a></li>
+      <li><a href="articles.html" class="button">Articles</a></li>
       </ul>
      </div>
    </div>
@@ -98,7 +98,7 @@
               <p>One of the hottest building trends in brick work today is the twisted brick or twisted column design. We are masters at this, we have many years of experience in this style and we know what it takes to pull it off correctly, this is why we can guarantee a quality column for longer than the life of your home.</p>
             </div>
             <div class="large-6 columns">
-              <p>Mastering these types of columns takes patience and discipline and these are things that you won't find in every mason, that is another reason to choose Top Level Masonry for your next project! <a href="contact.php">Contact</a> us today for a quote on any custom brick work!</p>
+              <p>Mastering these types of columns takes patience and discipline and these are things that you won't find in every mason, that is another reason to choose Top Level Masonry for your next project! <a href="contact.html">Contact</a> us today for a quote on any custom brick work!</p>
             </div>
           </div>
         </div>
@@ -142,18 +142,18 @@
     <div class="large-12 columns">
       <div class="row">
         <div class="large-6 columns">
-          <p>&copy; <?php echo date('Y')?> Top Level Masonry LLC.</p>
+          <p>&copy; <script>document.write(new Date().getFullYear())</script> Top Level Masonry LLC.</p>
         </div>
         <div class="large-6 columns">
           <ul class="inline-list right">
 			<li><a href="#top"><p style="color:black;">back to the top</p></a></li>
-			<li><a href="contact.php"><p style="color:black;">contact us</p></a></li>
+			<li><a href="contact.html"><p style="color:black;">contact us</p></a></li>
 			<li><a href="tel:7017135610"><p style="color:black">Call us at <mark>701-713-5610</mark></p></a></li>
 			<li><a href="http://www.facebook.com/toplevelmasonry"><img src="img/facebook_logo_top_level.png" alt="like us on facebook" title="like Top Level on facebook"></a></li>
-			<li><a href="articles.php"><p style="color:black;">articles</p></a></li>
-			<li><a href="index.php"><p style="color:black;">home</p></a></li>
+			<li><a href="articles.html"><p style="color:black;">articles</p></a></li>
+			<li><a href="index.html"><p style="color:black;">home</p></a></li>
 			<li><a href="sitemap.xml"><p style="color:black;">xml sitemap</p></a></li>
-            <li><a href="http://www.4point0designs.com/index.php"><p style="color:black;">web page by 4.0</p></a></li>
+            <li><a href="http://www.4point0designs.com/index.html"><p style="color:black;">web page by 4.0</p></a></li>
           </ul>
         </div>
       </div>
@@ -161,8 +161,8 @@
   </footer>
   </div><!--end outside loop div-->
 
-   <script src="js/vendor/jquery.js"></script>
-   <script src="js/foundation.min.js"></script>
+   <script src="./framework/js/vendor/jquery.js"></script>
+   <script src="./framework/js/foundation.min.js"></script>
    <script>$(document).foundation();</script>
   </body>
 
