update license and pathway

--- a/flyer.html
+++ b/flyer.html
@@ -15,6 +15,6 @@ body{background-color: #999;}
 <div class="flyer">
 <img src="img/top_level_masonry_image_ad_flyer.png" alt="Top Level Masonry's online Flyer" title="Flyer for Top Level Masonry's Advertising Campaign">
 </div>
-<div><p>  Please Visit Top Level Masonry's Home Page by Clicking <a href="index.php">here</a></p></div>
+<div><p>  Please Visit Top Level Masonry's Home Page by Clicking <a href="index.html">here</a></p></div>
 </body>
 </html>
