add correct email address to the contact

--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 	<div class="row">
 		<div class="large-12 columns">
 
-<a href="mailto:someone@example.com?Subject=TopLevelWebMessage" target="_top">Contact by email</a>
+<a href="mailto:toplevelmasonry@gmail.com?Subject=TopLevelWebMessage" target="_top">Contact by email</a>
 
 	</div>
 		</div>
