--- a/articles.html
+++ b/articles.html
@@ -15,6 +15,17 @@
     <link rel="stylesheet" href="./framework/css/foundation.css" />
 	<script src="./framework/js/vendor/modernizr.js"></script>
 
+    <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-53556531-8', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 				<script>
 				var message = "function disabled copyright T.L.M. LLC";
 				function rtclickcheck(keyp){ if (navigator.appName == "Netscape" && keyp.which == 3){ alert(message); return false; }
